<?xml version="1.0"?>
<package format="3">
  <name>mic_record</name>
  <version>0.0.0</version>
  <description>Record audio when PX4 is armed</description>
  <maintainer email="you@example.com">YOUR_NAME</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구: ament_python 사용 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <!-- 이 패키지는 ament_python 빌드 타입이다 -->
    <build_type>ament_python</build_type>
  </export>
</package>
