<?xml version="1.0"?>
<package format="3">
  <name>mic_record</name>
  <version>0.0.0</version>
  <description>Record audio when PX4 is armed.</description>

  <maintainer email="ymo@o.cnu.ac.kr">ymo</maintainer>
  <license>Apache-2.0</license>

  <!-- ðŸ”¥ ì´ íŒ¨í‚¤ì§€ëŠ” Python(ament_python) ë¹Œë“œíˆ´ì„ ì‚¬ìš©í•œë‹¤ -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ðŸ”¥ ëŸ°íƒ€ìž„ì— í•„ìš”í•œ ì˜ì¡´ì„±ë“¤ -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <!-- ðŸ”¥ ament_python íŒ¨í‚¤ì§€ë¼ëŠ” ì„ ì–¸ (ì—„ì²­ ì¤‘ìš”) -->
    <build_type>ament_python</build_type>
  </export>
</package>
